Anlagen einlesen aus Transpordatei und Synonyme zuordnen

--- a/app/views/upload/anlagen_zuordnung.html.erb
+++ b/app/views/upload/anlagen_zuordnung.html.erb
@@ -1,10 +1,10 @@
 <h1>Datei einlesen</h1>
 
-<p> Die Datei wurde erfolgreich auf dem Server gespeichert. </p>
+<% if flash[:notice] %>
+  <%= flash[:notice] %>
+<% end %>
 
-<p> Die Anlagen sind in den Spalten <%= @spalte_nr1 %> und <%= @spalte_nr2 %>. </p>
-
-<h2>Schritt 3: Anlagen zuordnen.</h2>
+<h2>Anlagen zuordnen.</h2>
 
 Neue Anlage anlegen:
 
