--- a/app/views/transporte/index.html.erb
+++ b/app/views/transporte/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Listing transporte</h1>
 
+<% unless @transporte.nil? %>
 <table>
   <thead>
     <tr>
@@ -25,6 +26,8 @@
     <% end %>
   </tbody>
 </table>
+
+<% end %>
 
 <br>
 
