--- a/app/views/anlagen/_form.html.erb
+++ b/app/views/anlagen/_form.html.erb
@@ -30,6 +30,14 @@
     <%= f.text_field :ort %>
   </div>
   <div class="field">
+    <%= f.label :lat %><br>
+    <%= f.text_field :lat %>
+  </div>
+  <div class="field">
+    <%= f.label :lon %><br>
+    <%= f.text_field :lon %>
+  </div>
+  <div class="field">
     <%= f.label :beschreibung %><br>
     <%= f.text_area :beschreibung %>
   </div>
