--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <body>
     <header class="navbar navbar-default">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Atomtransport-Datenbank</a>
+        <%= link_to 'Atomtransport-Datenbank', root_path, class: "navbar-brand" %>
       </div>
     </header>
     <div class="container">
