--- a/app/views/transporte/index.html.erb
+++ b/app/views/transporte/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Listing transporte</h1>
 
 <% unless @transporte.nil? %>
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Datum</th>
