--- a/app/views/anlagen/_form.html.erb
+++ b/app/views/anlagen/_form.html.erb
@@ -41,6 +41,14 @@
     <%= f.label :beschreibung %><br>
     <%= f.text_area :beschreibung %>
   </div>
+  <div class="field">
+    <%= f.label :bild_url %><br>
+    <%= f.text_field :bild_url %>
+  </div>
+  <div class="field">
+    <%= f.label :bild_urheber %><br>
+    <%= f.text_field :bild_urheber %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
