--- a/app/views/transporte/_form.html.erb
+++ b/app/views/transporte/_form.html.erb
@@ -35,8 +35,8 @@
     <%= f.text_field :stoff %>
   </div>
   <div class="field">
-    <%= f.label :behaeltertyp %><br>
-    <%= f.text_field :behaeltertyp %>
+    <%= f.label :behaelter %><br>
+    <%= f.text_field :behaelter %>
   </div>
 
 
