--- a/app/views/transporte/show.html.erb
+++ b/app/views/transporte/show.html.erb
@@ -27,8 +27,8 @@
 </p>
 
 <p>
-  <strong>Behaeltertyp:</strong>
-  <%= @transport.behaeltertyp %>
+  <strong>Behaelter:</strong>
+  <%= @transport.behaelter %>
 </p>
 
 <%= link_to 'Edit', edit_transport_path(@transport) %> |
