--- a/app/views/upload/index.html.erb
+++ b/app/views/upload/index.html.erb
@@ -1,10 +1,22 @@
 <h1>Datei einlesen</h1>
 
-<%= form_tag({action: :upload_file}, multipart: true) do %>
-  Hier kann eine csv-Datei ausgewählt werden. 
-  <p>
-    <label for="upload_file">Datei aussuchen: </label>
-    <%= file_field_tag 'upload' %>
-  </p>
-  <%= submit_tag "Weiter zum Auswerten" %>
-<% end %>
+<div class="panel panel-default">
+  
+  <div class="panel-heading">
+    <h3 class="panel-title">Schritt 1: Datei auswählen</h3>
+  </div>
+  
+  <div class="panel-body">
+    <%= form_tag({action: :upload_file}, multipart: true) do %>
+      <div class="form-group">
+        <%= file_field_tag 'upload' %>
+        <p class="help-block">Bitte wähle die CSV-Datei aus, die ausgewertet werden soll.</p>
+      </div>
+   </div>
+   
+   <div class="panel-footer">
+      <%= submit_tag "Weiter zum Auswerten", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+  
+</div>
