--- a/app/views/upload/upload_file.html.erb
+++ b/app/views/upload/upload_file.html.erb
@@ -1,17 +1,27 @@
 <h1>Datei einlesen</h1>
 
-<p> Die Datei wurde erfolgreich auf dem Server gespeichert. </p>
-
-<h2>Schritt 2: Anlagen einlesen</h2>
-
-<%= form_tag({action: :read_anlagen}, multipart: true) do %>
-  In welchen Spalten sind Atomanlagen gespeichert? Bitte den Spaltentitel exakt angeben.
-  <p>
-    Startanlage: <%= text_field_tag 'start' %>
-  </p>
-  <p>
-    Zielanlage: <%= text_field_tag 'ziel' %>
-  </p>
-  <%= hidden_field_tag 'file_path', @file_path %>
-  <%= submit_tag "Weiter zum Auswerten" %>
-<% end %>
+<div class="panel panel-default">
+  
+  <div class="panel-heading">
+    <h3 class="panel-title">Schritt 2: Anlagen einlesen</h3>
+  </div>
+  
+  <div class="panel-body">
+    <p>Bitte wähle die Spalten aus, in der die Atomanlagen gespeichert sind.</p>
+    <%= form_tag({action: :read_anlagen}, multipart: true) do %> 
+      <div class="form-group">
+        <label for="start">Startanlage</label>
+        <%= select_tag 'start', options_for_select(@headers), class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <label for="ziel">Zielanlage</label>
+        <%= select_tag 'ziel', options_for_select(@headers), class: "form-control" %>
+      </div>
+      <%= hidden_field_tag 'file_path', @file_path %>
+    </div>
+    
+    <div class="panel-footer">
+      <%= submit_tag "Weiter zum Auswerten", class: "btn btn-primary" %>
+    </div>
+  <% end %>
+</div>
