--- a/app/views/transporte/show.html.erb
+++ b/app/views/transporte/show.html.erb
@@ -1,7 +1,7 @@
 <%= render "show_transport_grunddaten" %>
 
 <div class="btn-group header-buttons">
-      <%= link_to 'Bearbeiten', edit_transport_path(@transport) , class: "btn btn-primary" %>
+      <%= link_to 'Bearbeiten', edit_abschnitte_transport_path(@transport) , class: "btn btn-primary" %>
 </div>
 <h3> Transportabschnitte </h3>
 
