--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,4 +8,5 @@
     <li><%= link_to "Daten zu Transporten bearbeiten", transporte_path %></li>
     <li><%= link_to "Daten zu Beobachtungen bearbeiten", beobachtungen_path %></li>
   </ul>
+  <img  width="300" height="187" alt="14072014_Uranzug4" src="http://umweltfairaendern.de/wp-content/uploads/2014/07/14072014_Uranzug4-300x187.jpg"></img>
 </div>
