--- a/app/views/transporte/edit_abschnitte.html.erb
+++ b/app/views/transporte/edit_abschnitte.html.erb
@@ -1,14 +1,17 @@
 <%= render "show_transport_grunddaten" %>
 
-<div class="btn-group header-buttons">
-      <%= link_to 'Bearbeiten', edit_transport_path(@transport) , class: "btn btn-primary" %>
-</div>
-<h3> Transportabschnitte </h3>
+<%= form_tag({action: :update_abschnitte}, multipart: true) do %>
+  <div class="btn-group header-buttons">
+      <%= submit_tag 'Änderungen speichern', class: "btn btn-primary" %>
+  </div>
+  <h3> Transportabschnitte </h3>
 
-<% @transport.transportabschnitte.each do |transport_abschnitt| %>
-  <%= render "_form_abschnitt", abschnitt: transport_abschnitt %>
-<% end %>
+  <% @transport.transportabschnitte.each do |transport_abschnitt| %>
+    <%= render "form_abschnitt", abschnitt: transport_abschnitt %>
+  <% end %>
 
-
+<% end %> 
+ 
+ 
 <%= link_to 'Alle Transporte', transporte_path %>
 
